--- a/tonconnect-manifest.json
+++ b/tonconnect-manifest.json
@@ -1,5 +1,5 @@
 {
-  "url": "https://github.com/nc0ted/CatsTwa/upload/",
+  "url": "https://github.com/nc0ted/CatsTwa/",
   "name": "CatsTwa",
   "iconUrl": "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRYZj-DMMnqn9g6BhKeZ4gVtiu7U6Xv9maoxQ&usqp=CAU"
 }
